[project]
name = "simplemd"
version = "0.1.0"
description = "A simple molecular dynamics simulator (Lennard-Jones soft fluid and TIP-4P water) with an optional HTTP API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ruard van Workum" }]
keywords = ["molecular-dynamics", "simulation", "lennard-jones", "tip4p", "physics"]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
    "gunicorn>=21.0",
]
viz = [
    "pygame>=2.5",
]

[project.scripts]
simplemd = "simplemd.cli:main"

[project.urls]
Homepage = "https://github.com/rhjvanworkum/SimpleMD"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simplemd"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]
ignore = [
    "E741",   # ambiguous variable names (l, k) are common in the physics loops
    "NPY002", # legacy global np.random is intentional: simple global seeding that
              # reproduces the original (pre-refactor) random streams bit-for-bit
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src/simplemd"]
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
# Start lenient; tighten over time.
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
